--- a/odin-recipes/style.css
+++ b/odin-recipes/style.css
@@ -1,19 +1,30 @@
-h1,
-img,
-p {
-  width: 500px;
+body {
+  background-color: rgb(250, 220, 220);
 }
 
 h1 {
   background-color: darkred;
   color: white;
   text-align: center;
+  padding: 10px;
+  border-radius: 25px;
 }
 
 img {
   height: auto;
   border-radius: 25px;
+  max-width: 100%;
+  display: block;
+  margin: auto;
 }
 
-p {
+.content-wrap {
+  width: 750px;
+  margin: auto;
+  background-color: rgb(255, 249, 248);
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-radius: 25px;
 }
