--- a/odin-landing-page/style.css
+++ b/odin-landing-page/style.css
@@ -1,11 +1,11 @@
-
+@import url("https://fonts.googleapis.com/css?family=Roboto");
 
 body {
   display: flex;
   flex-direction: column;
   margin: 0;
   min-height: 100vh;
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
 }
 
 .header {
