--- a/odin-landing-page/style.css
+++ b/odin-landing-page/style.css
@@ -88,15 +88,30 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 60px 20%;
+  padding: 80px 20%;
 }
 
 .cta-card {
   background-color: #3882f6;
   color: white;
-  width: 100%;
+  width: 600px;
   padding: 20px;
-  border-radius: 25px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 10px;
+}
+
+button {
+  color: white;
+  border: white;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 5px;
+  background-color: #3882f6;
+  font-weight: bold;
+  font-size: 10px;
+  padding: 4px 20px;
 }
 
 .footer {
