--- a/odin-landing-page/style.css
+++ b/odin-landing-page/style.css
@@ -65,12 +65,42 @@ p {
 }
 
 .info-section {
-  padding: 20px 20%;
+  padding: 80px 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.info-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align:  center;
+  width: 100px;
+  font-size: 10px;
+  gap: 6px;
+}
+
+.info-card-image {
+  width: 90px;
+  height: 90px;
+  background-color: white;
+  border: #3882f6;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 10px;
+}
+
+.info-card-container {
+  display: flex;
+  width: 500px;
+  justify-content: space-between;
 }
 
 .quote-section {
   background-color: #e5e7eb;
-  padding: 40px 25%;
+  padding: 80px 25%;
 }
 
 .quote {
@@ -120,4 +150,5 @@ button {
   padding: 20px 20%;
   text-align: center;
   margin-top: auto;
+  font-size: 10px;
 }
