--- a/odin-landing-page/style.css
+++ b/odin-landing-page/style.css
@@ -19,7 +19,7 @@ body {
 
 .header-logo {
   font-weight: bold;
-  font-size: 24px;
+  font-size: 18px;
 }
 
 ul {
@@ -28,6 +28,7 @@ ul {
   padding: 0;
   display: flex;
   gap: 16px;
+  font-size: 12px;
 }
 
 a {
@@ -77,6 +78,7 @@ p {
   align-items: center;
   padding: 16px;
   flex: 1;
+  font-size: 10px;
 }
 
 .info-section {
@@ -91,7 +93,7 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align:  center;
+  text-align: center;
   width: 100px;
   font-size: 10px;
   gap: 6px;
@@ -127,6 +129,8 @@ p {
 
 .quote-author {
   text-align: right;
+  color: #1f2937da;
+  font-weight: 900;
 }
 
 .cta-section {
@@ -162,7 +166,7 @@ button {
 .footer {
   background-color: #1f2937;
   color: white;
-  padding: 20px 20%;
+  padding: 30px 20%;
   text-align: center;
   margin-top: auto;
   font-size: 10px;
