--- a/odin-calculator/style.css
+++ b/odin-calculator/style.css
@@ -1,3 +1,7 @@
+* {
+  font-family: monospace;
+}
+
 body {
   margin: 0;
   height: 100vh;
@@ -7,16 +11,61 @@ body {
   align-items: center;
 }
 
+button {
+  font-weight: normal;
+  font-size: 36px;
+  background-color: rgb(199, 199, 235);
+  border: none;
+  border-radius: 5px;
+  box-shadow: 2px 2px 4px rgb(99, 98, 98);
+}
+
+button:active {
+  background-color: rgb(210, 210, 247);
+}
+
 .calc-container {
   height: 600px;
-  width: 500px;
+  width: 400px;
   padding: 20px;
   background-color: rgb(146, 146, 146);
+  box-shadow: 8px 8px 4px rgb(100, 99, 99);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .calc-container-screen {
   height: 100px;
   width: 100%;
-  background-color: rgb(218, 219, 219);
+  background-color: rgb(223, 228, 228);
   text-align: right;
+  line-height: 100px;
+  font-size: 80px;
+  margin-bottom: 10px;
+  box-shadow: inset 2px 2px 4px rgb(99, 98, 98);
+}
+
+.calc-container-interact {
+  flex: 1;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  row-gap: 4px;
+  column-gap: 4px;
+}
+
+.operand {
+  background-color: rgb(214, 171, 224);
+}
+
+.operand:active {
+  background-color: rgb(239, 191, 250);
+}
+
+.operator {
+  background-color: rgb(157, 166, 209);
+}
+
+.operator:active {
+  background-color: rgb(187, 196, 241);
 }
