--- a/odin-admin-dashboard/style.css
+++ b/odin-admin-dashboard/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -8,12 +10,13 @@ body {
   display: grid;
   grid-template-columns: 1fr 4fr;
   grid-template-rows: 1fr 4fr;
+  font-family: "Roboto";
 }
 
 nav {
   padding: 20px;
   color: white;
-  background-color: rgba(0, 0, 255, 0.685);
+  background-color: rgba(0, 0, 255, 0.493);
   grid-column: 1 / 2;
   grid-row: 1 / 3;
   display: grid;
@@ -23,7 +26,7 @@ nav {
 
 nav ul li {
   list-style-type: none;
-  margin-bottom: 3px;
+  margin-bottom: 5px;
 }
 
 .nav-logo {
@@ -31,9 +34,63 @@ nav ul li {
 }
 
 header {
-  background-color: white;
+  padding: 20px;
+  background-color: rgb(253, 253, 253);
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr 2fr;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 main {
-  background-color: rgb(192, 192, 192);
+  background-color: rgba(223, 223, 223, 0.541);
+}
+
+.header-welcome {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-weight: bold;
+}
+
+.header-welcome .name {
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.header-search {
+  display: grid;
+  align-items: center;
+}
+
+.header-notify {
+  display: grid;
+  align-items: center;
+  text-align: end;
+}
+
+.header-cta {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  gap: 50px;
+}
+
+.header-cta button {
+  height: 40%;
+  border-radius: 20px;
+  background-color: rgba(0, 0, 255, 0.493);
+  color: white;
+  font-weight: bold;
+  border: none;
+}
+
+.search-bar {
+  background-color: rgba(223, 223, 223, 0.541);
+  width: 75%;
+  height: 75%;
+  border-radius: 10px;
+  padding-left: 10px;
+  display: grid;
+  align-items: center;
 }
