--- a/odin-admin-dashboard/style.css
+++ b/odin-admin-dashboard/style.css
@@ -43,7 +43,28 @@ header {
 }
 
 main {
+  padding: 20px;
   background-color: rgba(223, 223, 223, 0.541);
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  gap: 10px;
+}
+
+.project-section {
+  grid-row: 1 / 4;
+  grid-column: 1 / 2;
+}
+
+.announcement-section {
+  grid-row: 1 / 3;
+  display: grid;
+  grid-template-rows: auto 1fr;
+}
+
+.announcement-card {
+  background-color: white;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .header-welcome {
